<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/help"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="70dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:text="@string/delay" />
            <EditText
                android:id="@+id/time_delay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:text=""
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/choose_dir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choose_dir"
                android:onClick="onClick_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/path"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:gravity=""/>
            <CheckBox
                android:id="@+id/recursive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recursive"
                android:gravity=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom">
                <Button
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/rate"
                    android:onClick="onClick_button"
                    android:layout_weight="50"/>
                <Button
                    android:id="@+id/donate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/donate"
                    android:onClick="onClick_button"
                    android:layout_weight="50"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>